--- a/movement.html
+++ b/movement.html
@@ -261,6 +261,29 @@ body {
         letter-spacing:0.3em;
     }
 }
+/* =========================================================
+   OPTION A — READING SECTIONS (LOCKED SYSTEM)
+   ========================================================= */
+
+/* Mobile-first reading density */
+.reading {
+    max-width: 720px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+/* Desktop enhancement only */
+@media (min-width: 769px) {
+    .reading {
+        max-width: 900px;
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+
+    
 </style>
 </head>
 
