--- a/music.html
+++ b/music.html
@@ -471,7 +471,19 @@ html, body {
   writing-mode: vertical-rl;
 }
 
+/* OPTION A — READING SECTIONS ONLY */
+.reading {
+  max-width: 720px;
+  margin: 0 auto;
+  padding: 0 16px;
+}
 
+@media (min-width: 769px) {
+  .reading {
+    max-width: 900px;
+    padding: 0;
+  }
+}
     
 
     
