--- a/music.html
+++ b/music.html
@@ -489,15 +489,18 @@ html, body {
 
 .section-banner {
   width: 100%;
-  min-height: 240px;              /* ← THIS is what was missing */
+  min-height: 240px;
   margin-bottom: 60px;
 
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
 
-  background: rgba(255,255,255,0.04);   /* visible placeholder */
+  /* 🔥 DO NOT override existing art */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
   border: 1px solid rgba(212,175,55,0.35);
 
   color: #f3d688;
