--- a/music.html
+++ b/music.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>EPÒK | Universal Page</title>
-
+<style>
 * { margin:0; padding:0; box-sizing:border-box; }
 
 html, body {
@@ -224,7 +224,7 @@ html, body {
         padding:0;
     }
 }
-
+</style>
 </head>
 
 <body>
