--- a/music.html
+++ b/music.html
@@ -161,7 +161,7 @@ html, body {
     0 40px 120px rgba(0,0,0,0.95);
 }
 
-/* ================= SECTION BANNER (PRESERVED) ================= */
+/* ================= SECTION BANNER (LOCKED & PRESERVED) ================= */
 .section-banner {
   width:100%;
   min-height:160px;
@@ -170,8 +170,10 @@ html, body {
   flex-direction:column;
   align-items:center;
   justify-content:center;
+
   border:1px solid rgba(212,175,55,0.35);
   background:rgba(0,0,0,0.55);
+
   color:#f3d688;
   font-size:0.8rem;
   letter-spacing:0.32em;
@@ -184,6 +186,7 @@ html, body {
   letter-spacing:0.24em;
   color:#999;
 }
+
 
 /* ================= READING SYSTEM (TEXT ONLY) ================= */
 .reading {
