--- a/music.html
+++ b/music.html
@@ -163,6 +163,9 @@ html, body {
 
 /* ================= SECTION BANNER (LOCKED & PRESERVED) ================= */
 .section-banner {
+  position: relative;
+  z-index: 2;
+
   width:100%;
   min-height:160px;
   margin:40px 0 80px;
@@ -170,9 +173,10 @@ html, body {
   flex-direction:column;
   align-items:center;
   justify-content:center;
-
   border:1px solid rgba(212,175,55,0.35);
   background:rgba(0,0,0,0.55);
+}
+
 
   color:#f3d688;
   font-size:0.8rem;
