--- a/music.html
+++ b/music.html
@@ -484,10 +484,10 @@ html, body {
 <section class="store-section" id="music">
 
   <!-- BANNER PLACEHOLDER (ART ADDED BY YOU LATER) -->
-  <div class="section-banner">
-    MUSIC — BANNER PLACEHOLDER
-    <small>Artwork added manually</small>
-  </div>
+ <section class="about-banner">
+    <img src="images/survivebanner.png" alt="EPÒK — Survive. Rise. Become.">
+</section>
+
 
   <!-- MUSIC INTRO TEXT -->
   <div class="music-intro">
