--- a/music.html
+++ b/music.html
@@ -22,9 +22,7 @@ html, body {
     overflow:hidden;
 }
 
-/* =========================================================
-   TOP NAV (VERBATIM – UNTOUCHED)
-   ========================================================= */
+/* ================= TOP NAV (VERBATIM) ================= */
 .top-nav {
     position:fixed;
     top:0;
@@ -44,12 +42,12 @@ html, body {
     overflow-y:hidden;
     white-space:nowrap;
     -webkit-overflow-scrolling:touch;
-    padding:0 24px;
+    padding:0 6vw; /* VERBATIM */
     display:flex;
     align-items:center;
 }
 
-.nav-scroll::-webkit-scrollbar { height:0; }
+.nav-scroll::-webkit-scrollbar { height:0px; }
 .nav-scroll { scrollbar-width:none; }
 
 .nav-links {
@@ -80,9 +78,7 @@ html, body {
     color:#f3d688;
 }
 
-/* =========================================================
-   DOUBLE ROYAL FRAME (LOCKED)
-   ========================================================= */
+/* ============ DOUBLE ROYAL FRAME (LOCKED) ============ */
 .page-frame-outer {
     position:fixed;
     inset:0;
@@ -95,15 +91,16 @@ html, body {
 
 .page-frame-outer::before,
 .page-frame-outer::after {
-    content:"SURVIVE • RISE • BECOME • STEP INTO YOUR EPÒK • ";
+    content:"SURVIVE • RISE • BECOME • STEP INTO YOUR EPÒK • SURVIVE • RISE • BECOME • STEP INTO YOUR EPÒK • ";
     position:absolute;
     top:22px;
     bottom:22px;
     width:22px;
     writing-mode:vertical-rl;
+    text-orientation:mixed;
     font-size:0.65rem;
     letter-spacing:0.35em;
-    color:#fff;
+    color:#ffffff;
     white-space:nowrap;
 }
 
@@ -134,7 +131,7 @@ html, body {
     right:0;
     font-size:0.7rem;
     letter-spacing:0.45em;
-    color:#fff;
+    color:#ffffff;
     white-space:nowrap;
     overflow:hidden;
     text-align:center;
@@ -148,12 +145,10 @@ html, body {
 
 @keyframes arabic-scroll {
     from { transform:translateX(0); }
-    to   { transform:translateX(-100%); }
+    to { transform:translateX(-100%); }
 }
 
-/* =========================================================
-   PAGE SCROLLER (LOCKED)
-   ========================================================= */
+/* ============ PAGE SCROLLER (LOCKED) ============ */
 .page-scroll {
     position:fixed;
     inset:0;
@@ -171,20 +166,24 @@ html, body {
         0 40px 120px rgba(0,0,0,0.95);
     background:#000;
     position:relative;
+
+    /* 🔒 Reading system update: remove vw padding here */
     padding:88px 0 140px;
 }
 
 /* =========================================================
-   READING FRAME (GLOBAL DEFAULT – LOCKED)
+   🔒 READING-FRAME SYSTEM (GLOBAL DEFAULT)
+   - Text/content goes inside .reading-frame
    ========================================================= */
 .reading-frame {
     max-width:760px;
     margin:0 auto;
-    padding:0 22px;
+    padding:0 22px; /* fixed px, no vw */
 }
 
 /* =========================================================
-   FULL BLEED (EXPLICIT OPT-OUT)
+   🔒 FULL-BLEED (EXPLICIT OPT-OUT)
+   - Visual/cinematic sections go inside .full-bleed
    ========================================================= */
 .full-bleed {
     width:100%;
@@ -194,116 +193,312 @@ html, body {
 }
 
 /* =========================================================
-   MUSIC PAGE – READING CONTENT
+   EXPLICIT MEDIA FIT (ONLY when you apply this class)
+   - For banners/hero images you want to fit the screen width
+   - No global img rules
    ========================================================= */
+.media-fit {
+    display:block;
+    width:100%;
+    height:auto;
+}
+
+/* ================= MUSIC PAGE ================= */
+
 .music-intro {
-    margin:80px auto 100px;
-    line-height:1.8;
+  max-width: 760px;
+  margin: 80px auto 100px;
+  line-height: 1.8;
 }
 
 .music-title {
-    font-size:0.85rem;
-    letter-spacing:0.32em;
-    text-transform:uppercase;
-    color:#f3d688;
-    margin-bottom:24px;
+  font-size: 0.85rem;
+  letter-spacing: 0.32em;
+  text-transform: uppercase;
+  color: #f3d688;
+  margin-bottom: 24px;
 }
 
 .music-intro p {
-    font-size:0.72rem;
-    letter-spacing:0.02em;
-    margin-bottom:18px;
-    color:#e8e4d8;
+  font-size: 0.72rem;
+  letter-spacing: 0.02em;
+  margin-bottom: 18px;
+  color: #e8e4d8;
 }
 
 .music-poetic {
-    margin-top:30px;
-    font-style:italic;
-    opacity:0.9;
+  margin-top: 30px;
+  font-style: italic;
+  opacity: 0.9;
 }
 
 .music-mantra {
-    margin-top:40px;
-    letter-spacing:0.34em;
-    text-transform:uppercase;
-    color:#f3d688;
+  margin-top: 40px;
+  letter-spacing: 0.34em;
+  text-transform: uppercase;
+  color: #f3d688;
 }
 
-/* =========================================================
-   ALBUM / PLAYER (VISUAL – FULL BLEED SAFE)
-   ========================================================= */
 .album-wrap {
-    margin:120px auto;
-    text-align:center;
+  margin: 120px auto;
+  text-align: center;
 }
 
 .album-note {
-    display:block;
-    margin-top:14px;
-    font-size:0.6rem;
-    letter-spacing:0.24em;
-    color:#999;
+  display: block;
+  margin-top: 14px;
+  font-size: 0.6rem;
+  letter-spacing: 0.24em;
+  color: #999;
 }
 
-.album-player {
-    width:320px;
-    margin:80px auto;
-    text-align:center;
-}
+/* ================= TRACK LIST ================= */
 
-.album-cover {
-    width:320px;
-    height:320px;
-    border:1px solid rgba(212,175,55,0.35);
-    cursor:pointer;
-}
-
-.album-cover img {
-    width:100%;
-    height:100%;
-    object-fit:cover;
-}
-
-/* =========================================================
-   TRACK LIST (READING WIDTH)
-   ========================================================= */
 .tracklist {
-    margin:80px auto 0;
-    border-top:1px solid rgba(212,175,55,0.25);
+  max-width: 760px;
+  margin: 80px auto 0;
+  border-top: 1px solid rgba(212,175,55,0.25);
 }
 
 .track-row {
-    display:flex;
-    align-items:center;
-    gap:18px;
-    padding:14px 0;
-    border-bottom:1px solid rgba(212,175,55,0.12);
-    font-size:0.7rem;
-    letter-spacing:0.12em;
+  display: flex;
+  align-items: center;
+  gap: 18px;
+  padding: 14px 0;
+  border-bottom: 1px solid rgba(212,175,55,0.12);
+  font-size: 0.7rem;
+  letter-spacing: 0.12em;
 }
 
-/* =========================================================
-   MOBILE (LOCKED)
-   ========================================================= */
+.track-row span {
+  width: 28px;
+  color: #f3d688;
+}
+
+.track-row a {
+  color: #e8e4d8;
+  text-decoration: none;
+}
+
+.track-row a:hover {
+  color: #f3d688;
+}
+
+/* ===== ALBUM → PLAYER TRANSITION ===== */
+.album-player {
+  width: 320px;
+  margin: 80px auto;
+  position: relative;
+  text-align: center;
+}
+
+.player-ui {
+  display: none;
+  opacity: 0;
+  transition: opacity 0.6s ease;
+
+  flex-direction: column;
+  align-items: center;
+}
+
+.record {
+  margin-bottom: 24px;
+}
+
+.player-controls {
+  margin-top: 12px;
+}
+
+.album-cover {
+  width: 320px;
+  height: 320px;
+  border: 1px solid rgba(212,175,55,0.35);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 0.28em;
+  cursor: pointer;
+  transition: opacity 1.4s ease;
+}
+
+.album-cover img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.album-player.active .album-cover {
+  display: none;
+}
+
+.album-player.active .player-ui {
+  display: flex;
+  opacity: 1;
+}
+
+/* RECORD */
+.record {
+  width: 260px;
+  height: 260px;
+  margin: 0 auto 30px;
+  border-radius: 50%;
+  border: 2px solid rgba(212,175,55,0.4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 0.28em;
+  color: #f3d688;
+}
+
+.record-art {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  border: 1px solid rgba(212,175,55,0.35);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.55rem;
+  letter-spacing: 0.25em;
+  color: #999;
+}
+
+.record-art img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.spinning {
+  animation: spin 6s linear infinite;
+}
+
+@keyframes spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
+.player-controls {
+  display: flex;
+  justify-content: center;
+  gap: 18px;
+}
+
+.player-controls button {
+  background: none;
+  border: 1px solid rgba(212,175,55,0.4);
+  color: #f3d688;
+  padding: 12px 16px;
+  cursor: pointer;
+}
+
+.track-info {
+  display: flex;
+  align-items: center;
+  gap: 14px;
+  flex: 1;
+}
+
+.track-art {
+  width: 42px;
+  height: 42px;
+  border: 1px solid rgba(212,175,55,0.35);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.5rem;
+  letter-spacing: 0.2em;
+  color: #999;
+}
+
+.track-play {
+  background: none;
+  border: none;
+  color: #e8e4d8;
+  cursor: pointer;
+  text-align: left;
+  font-size: 0.7rem;
+  letter-spacing: 0.12em;
+}
+
+.track-play:hover {
+  color: #f3d688;
+}
+
+.track-download {
+  text-decoration: none;
+  color: #777;
+  font-size: 0.75rem;
+}
+
+.track-download:hover {
+  color: #f3d688;
+}
+
+.track-row.active {
+  background: rgba(212,175,55,0.08);
+}
+
+/* ===== SIDE BANNERS ===== */
+.side-banners {
+  position: absolute;
+  inset: 0;
+  pointer-events: none;
+}
+
+.side-banner {
+  position: absolute;
+  top: 120px;
+  bottom: 120px;
+  width: 60px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+
+  font-size: 0.65rem;
+  letter-spacing: 0.4em;
+  color: rgba(212,175,55,0.65);
+}
+
+.side-banner.left {
+  left: -90px;
+}
+
+.side-banner.right {
+  right: -90px;
+}
+
+.side-banner span {
+  writing-mode: vertical-rl;
+}
+
+/* ============ MOBILE (LOCKED) ============ */
 @media (max-width:768px) {
 
-    .page-scroll { padding:14px; }
-    .page-frame-outer { padding:14px; }
+  .page-scroll { padding:14px; }
+  .page-inner { padding:78px 0 120px; }
 
-    .reading-frame {
-        padding:0 16px;
-    }
+  .page-frame-outer { padding:14px; }
 
-    .page-frame-outer::before,
-    .page-frame-outer::after {
-        font-size:0.55rem;
-        letter-spacing:0.30em;
-    }
+  .page-frame-outer::before,
+  .page-frame-outer::after {
+      font-size:0.55rem;
+      letter-spacing:0.30em;
+  }
 
-    .arabic-border {
-        font-size:0.6rem;
-        letter-spacing:0.30em;
-    }
+  .arabic-border {
+      font-size:0.6rem;
+      letter-spacing:0.30em;
+  }
+
+  /* Reading density (px, not vw) */
+  .reading-frame { padding:0 16px; }
+
+  /* Optional: keep album/player centered on small screens */
+  .album-player { width: 320px; }
 }
 
 
